<resources>
    <string name="default_web_client_id">88525641549-aag73eulao2lncjg990thm5jn8cdjnhi.apps.googleusercontent.com</string>
    <string name="default_android_client_id">88525641549-jcsb347tt4bpeltdmoqtg7co53b5ii7h.apps.googleusercontent.com</string>
    <string name="privacy_policy_link">https://www.kunano.com/privacy-policy</string>
    <string name="terms_of_service_link">https://www.kunano.com/terms-of-service</string>
    <string name="app_name">ScanSell</string>
    <string name="title_home">Home</string>
    <string name="title_sell">Sell</string>
    <string name="profile">Profile</string>
    <string name="businesses_title">Businesses</string>
    <string name="admin">Admin</string>
    <string name="create_new_business">Create new business</string>
    <string name="business_name">Business name</string>
    <string name="business_address">Business address</string>
    <string name="save">Save</string>
    <string name="advert_invalid_name">Name invalid. Only letters and spaces are allowed.</string>
    <string name="advert_invalid_address">Address is invalid. Special characters are not allowed.</string>
    <string name="advert_introduce_address">Introduce an address</string>
    <string name="business_created_succ">Business created successfully.</string>
    <string name="failure_to_create_business">Failed to create business.</string>
    <string name="delete_businesses_title">Delete businesses</string>
    <string name="cancel">Cancel</string>
    <string name="delete_businesses_warn">Deleted businesses cannot be retrieved</string>
    <string name="delete_product_warn">Deleted products cannot be retrieved</string>
    <string name="send_items_to_bin_warning">Move items to bin?</string>
    <string name="sending_items_to_bin">Sending items to bin...</string>
    <string name="delete">Delete</string>
    <string name="delete_selected_items">Delete selected items</string>
    <string name="deleting_selected_items">Deleting selected items...</string>
    <string name="deleting">Deleting...</string>
    <string name="restoring">Restoring... Do not close this app</string>
    <string name="businesses_deleted_succ">Businesses deleted successfully.</string>
    <string name="undo">Undo</string>
    <string name="ok">OK</string>
    <string name="all">All</string>
    <string name="add">Add</string>
    <string name="selected">Selected</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="inventory">Inventory</string>
    <string name="update">Update</string>
    <string name="business_update_successfully">Business updated successfully</string>
    <string name="details">Details</string>
    <string name="image_product_decription">Image of product</string>
    <string name="buying_price">Buying price</string>
    <string name="selling_price">Selling price</string>
    <string name="warning">Warning</string>
    <string name="bin">Bin</string>
    <string name="recycle_bin">Recycle bin</string>
    <string name="empty">Empty</string>
    <string name="edit">Edit</string>
    <string name="days">Days</string>
    <string name="day">Day</string>
    <string name="restore">Restore</string>
    <string name="restore_selected_items">Restore selected items</string>
    <string name="restoring_items">Restoring items...</string>
    <string name="set_buying_price">Set buying price</string>
    <string name="set_selling_price">Set selling price</string>
    <string name="set_stock">Set stock</string>
    <string name="camera">Camera</string>
    <string name="files">Files</string>
    <string name="try_again">Try again</string>
    <string name="name_a_z">Sort by name A-Z</string>
    <string name="name_z_a">Sort by name Z-A</string>
    <string name="stock_less_more">Stock less to more</string>
    <string name="stock_more_less">Stock more to less</string>
    <string name="send_bin_product">Move product to bin</string>
    <string name="products_sent_to_bin_successfully">Products moved to bin successfully</string>
    <string name="error_to_send_bin_product">Error moving product to bin</string>
    <string name="bin_business">Move businesses to bin</string>
    <string name="error_to_bin_business">Error moving business to bin</string>
    <string name="business_binned_successfully">Business moved to bin successfully</string>
    <string name="finish">Finish</string>
    <string name="pay">Pay</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="receipts">Receipts</string>
    <string name="balance_to_pay">Balance to pay:</string>
    <string name="cash_tendered">Cash tendered</string>
    <string name="balance_tendered">Balance tendered</string>
    <string name="cash_due">Cash due:</string>
    <string name="price">Price:</string>
    <string name="scanned_product_not_found">Scanned product not found</string>
    <string name="create_new_product">New product</string>
    <string name="delete_after_15_days">Delete after 15 days</string>
    <string name="delete_after_30_days">Delete after 30 days</string>
    <string name="options">Options</string>
    <string name="sells_and_revenues">Sales</string>
    <string name="most_sold_products">Most sold products</string>
    <string name="not_sold_product">There are no sold products</string>
    <string name="this_week">This week</string>
    <string name="last_week">Last week</string>
    <string name="this_month">This month</string>
    <string name="all_time">All time</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="back_up">Backup</string>
    <string name="sound_after_scanning">Sound after scanning</string>
    <string name="language">Language</string>
    <string name="email_address">Email address</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="last_backup">Last backup</string>
    <string name="create_backup">Create backup</string>
    <string name="restore_back_up">Restore backup</string>
    <string name="vibrate">Vibrate</string>
    <string name="beep">Beep</string>
    <string name="pick_sound">Pick a sound</string>
    <string name="data_restored_success">Data restored successfully</string>
    <string name="there_has_been_an_error">There has been an error</string>
    <string name="backup_destination">Backup destination</string>
    <string name="restore_from">Restore from</string>
    <string name="device">Device</string>
    <string name="drive">Drive</string>
    <string name="log_in">Log in</string>
    <string name="continue_google">Continue with Google</string>
    <string name="forgotten_pass">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_log_in">Login Activity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="scan_sell_backup">ScanSell Backups</string>
    <string name="faile_to_create_backup">Failed to create backup</string>
    <string name="faile_to_create_backup_verify_network">Failed to create backup. Verify your network connection.</string>
    <string name="backup_created_success">Backup created successfully</string>
    <string name="uploading_file_to_drive">Uploading file to drive. Do not close this app.</string>
    <string name="update_email">Update email</string>
    <string name="introduce_an_email">Introduce email</string>
    <string name="introduce_an_email_to_confirm">Introduce email to confirm</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="emails_not_matches">Emails do not match</string>
    <string name="email_updated_successfully">Email updated successfully</string>
    <string name="sign_in_again">Sign in again to make this operation</string>
    <string name="network_error">Verify your internet connection</string>
    <string name="update_request_sent">Update request sent</string>
    <string name="click_link_email_address">Click the link sent to the provided email address to update your email</string>
    <string name="sign_out">Sign out</string>
    <string name="enter_new_email_address">Enter new email address</string>
    <string name="confirm_new_email_address">Confirm new email address</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="change_name">Change name</string>
    <string name="name_updated_success">Name updated successfully</string>
    <string name="update_password">Update password</string>
    <string name="show_password">Show password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="upper_and_lower_case">At least one uppercase and lowercase letter</string>
    <string name="at_least_one_digit">At least one digit</string>
    <string name="at_least_eight_characters">At least 8 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="passwd_updated_success">Password updated successfully</string>
    <string name="intro_account_email">Introduce your account email</string>
    <string name="deleted_account_not_retrievable">Deleted accounts cannot be retrieved</string>
    <string name="introduced_email_incorrect">Incorrect email. Introduce your account email</string>
    <string name="introduce_your_account_email">Introduce your account email</string>
    <string name="account_deleted_success">Account deleted successfully</string>
    <string name="continue_action">Continue</string>
    <string name="introduce_name">Introduce name</string>
    <string name="email_in_use">The introduced email address is already in use</string>
    <string name="email_verification_sent">A verification email has been sent. Verify your email to log in</string>
    <string name="verify_email">Verify email</string>
    <string name="verification_sent">Verification link sent</string>
    <string name="sign_in_success">Signed in successfully</string>
    <string name="email_or_passwd_incorrect">Email or password incorrect</string>
    <string name="introduce_account_passwd">Introduce your account password</string>
    <string name="email_verification_sent_several_times">Email verification sent several times. Try again later</string>
    <string name="accept_terms_and_policies">Accept terms of service and privacy policy to sign up</string>
    <string name="i_agree">I agree to the</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="o">Or</string>
    <string name="recover_password">Recover password</string>
    <string name="try_again_later">Try again later</string>
    <string name="click_link_to_reset_passwd">Click on the link sent to the provided email to reset your account password</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="automatic">Automatic</string>
    <string name="saving_file_in_local">Saving copy. Do not close the app</string>
    <string name="leave_app">Leave app</string>
    <string name="buy_functionality">Backup</string>
    <string name="single_payment">Single payment</string>
    <string name="functionality_description">Buy this functionality and save copies of your businesses and restore them at any time.</string>
    <string name="remove_ads" translatable="false">Remove ads</string>
    <string name="premium_benefits" translatable="false">Subscribe to this plan and enjoy this app free of ads</string>
    <string name="subscribe" translatable="false">Subscribe</string>
</resources>