<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bin_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/bin" />
    <item
        android:id="@+id/filter_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/filter"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search_action"
        android:icon="@drawable/search_ic"
        android:title="@android:string/search_go"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/inventory_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/inventory"
        app:showAsAction="never" />
    <item
        android:id="@+id/update_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/update"
        app:showAsAction="never" />
    <item
        android:id="@+id/details_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/details"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/delete"
        app:showAsAction="never" />


</menu>