<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.sales.admin.premium.PremiumFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/premiumToolbar"
        app:title="@string/remove_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/surfColor"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/window_start_side"
        android:layout_marginEnd="@dimen/window_end_side"
        android:layout_below="@id/premiumToolbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_weight="0"
                android:layout_marginEnd="5dp"
                android:src="@drawable/baseline_circle_24" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/premium_benefits" />
        </LinearLayout>

        <Button
            android:id="@+id/subscribe_or_unsubscribe_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_side"
            android:text="@string/subscribe" />
    </LinearLayout>
</RelativeLayout>